Setup _LoginPartial for minton

--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout.cshtml
@@ -76,40 +76,41 @@
                         </a>
                     </li>
 
-                    <li class="list-inline-item dropdown notification-list">
-                        <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-toggle="dropdown" href="#" role="button"
-                           aria-haspopup="false" aria-expanded="false">
-                            <img src="assets/images/users/avatar-1.jpg" alt="user" class="rounded-circle">
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right profile-dropdown " aria-labelledby="Preview">
-                            <!-- item-->
-                            <div class="dropdown-item noti-title">
-                                <h5 class="text-overflow"><small>Welcome ! John</small> </h5>
-                            </div>
+                    <partial name="_LoginPartial" />
 
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                <i class="mdi mdi-account"></i> <span>Profile</span>
-                            </a>
+                    @*<li class="list-inline-item dropdown notification-list">
+            <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-toggle="dropdown" href="#" role="button"
+               aria-haspopup="false" aria-expanded="false">
+                <img src="assets/images/users/avatar-1.jpg" alt="user" class="rounded-circle">
+            </a>
+            <div class="dropdown-menu dropdown-menu-right profile-dropdown " aria-labelledby="Preview">
+                <!-- item-->
+                <div class="dropdown-item noti-title">
+                    <h5 class="text-overflow"><small>Welcome ! John</small> </h5>
+                </div>
 
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                <i class="mdi mdi-settings"></i> <span>Settings</span>
-                            </a>
+                <!-- item-->
+                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <i class="mdi mdi-account"></i> <span>Profile</span>
+                </a>
 
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                <i class="mdi mdi-lock-open"></i> <span>Lock Screen</span>
-                            </a>
+                <!-- item-->
+                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <i class="mdi mdi-settings"></i> <span>Settings</span>
+                </a>
 
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                <i class="mdi mdi-logout"></i> <span>Logout</span>
-                            </a>
+                <!-- item-->
+                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <i class="mdi mdi-lock-open"></i> <span>Lock Screen</span>
+                </a>
 
-                        </div>
-                    </li>
+                <!-- item-->
+                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <i class="mdi mdi-logout"></i> <span>Logout</span>
+                </a>
 
+            </div>
+        </li>*@
                 </ul>
 
                 <ul class="list-inline menu-left mb-0">
@@ -406,11 +407,6 @@
             </footer>
         </div>
     </div>
-
-
-    @*<footer class="footer container-fluid">
-            <span class="text-muted">&copy; 2018 - Lazztech.Cloud</span>
-        </footer>*@
 
     <environment include="Development">
         <!--Bootstrap 4 Section-->
