More configurations of the Minton theme _Layout and added back in the Jumbotron in the Index

--- a/Lazztech.Cloud.ClientFacade/Pages/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
+<div class="jumbotron">
+    <p class="lead">To make an apple pie from scratch you must first invent the universe.</p>
+</div>
 
 <div class="row">
     <div class="col-sm-6 col-lg-3">
@@ -100,10 +103,6 @@
 
 
 <!-- END wrapper -->
-@*<div class="jumbotron">
-        <p class="lead">To make an apple pie from scratch you must first invent the universe.</p>
-    </div>*@
-
 @*
         <div class="container">
         <div class="row">&nbsp;</div>
