--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout.cshtml
@@ -78,39 +78,6 @@
 
                     <partial name="_LoginPartial" />
 
-                    @*<li class="list-inline-item dropdown notification-list">
-            <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-toggle="dropdown" href="#" role="button"
-               aria-haspopup="false" aria-expanded="false">
-                <img src="assets/images/users/avatar-1.jpg" alt="user" class="rounded-circle">
-            </a>
-            <div class="dropdown-menu dropdown-menu-right profile-dropdown " aria-labelledby="Preview">
-                <!-- item-->
-                <div class="dropdown-item noti-title">
-                    <h5 class="text-overflow"><small>Welcome ! John</small> </h5>
-                </div>
-
-                <!-- item-->
-                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                    <i class="mdi mdi-account"></i> <span>Profile</span>
-                </a>
-
-                <!-- item-->
-                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                    <i class="mdi mdi-settings"></i> <span>Settings</span>
-                </a>
-
-                <!-- item-->
-                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                    <i class="mdi mdi-lock-open"></i> <span>Lock Screen</span>
-                </a>
-
-                <!-- item-->
-                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                    <i class="mdi mdi-logout"></i> <span>Logout</span>
-                </a>
-
-            </div>
-        </li>*@
                 </ul>
 
                 <ul class="list-inline menu-left mb-0">
@@ -140,205 +107,20 @@
                             </a>
                         </li>
 
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-shine"></i><span> Apps </span>
-                                <span class="badge badge-pink pull-right">New</span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="apps-kanban.html">Kanban Board</a></li>
-                                <li><a href="apps-companies.html">Companies</a></li>
-                                <li><a href="apps-filemanager.html">File Manager</a></li>
-                                <li><a href="apps-tickets.html">Tickets</a></li>
-                                <li><a href="apps-calendar.html">Calendar</a></li>
-                                <li><a href="apps-team.html">Team Members</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-email"></i><span> Mail </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="mail-inbox.html">Inbox</a></li>
-                                <li><a href="mail-compose.html">Compose Mail</a></li>
-                                <li><a href="mail-read.html">View Mail</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-paint-bucket"></i> <span> UI Kit </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="ui-buttons.html">Buttons</a></li>
-                                <li><a href="ui-cards.html">Cards</a></li>
-                                <li><a href="ui-portlets.html">Portlets</a></li>
-                                <li><a href="ui-checkbox-radio.html">Checkboxs-Radios</a></li>
-                                <li><a href="ui-tabs.html">Tabs & Accordions</a></li>
-                                <li><a href="ui-modals.html">Modals</a></li>
-                                <li><a href="ui-progressbars.html">Progress Bars</a></li>
-                                <li><a href="ui-notification.html">Notification</a></li>
-                                <li><a href="ui-bootstrap.html">BS Elements</a></li>
-                            </ul>
-                        </li>
-
                         <li>
-                            <a href="typography.html" class="waves-effect waves-primary">
-                                <i class="ti-infinite"></i><span> Typography </span>
+                            <a href="/Event" class="waves-effect waves-primary">
+                                <i class="ti-home"></i><span> Event </span>
                             </a>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-light-bulb"></i><span> Components </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="components-grid.html">Grid</a></li>
-                                <li><a href="components-carousel.html">Carousel</a></li>
-                                <li><a href="components-widgets.html">Widgets</a></li>
-                                <li><a href="components-nestable-list.html">Nesteble</a></li>
-                                <li><a href="components-range-sliders.html">Range Sliders </a></li>
-                                <li><a href="components-sweet-alert.html">Sweet Alerts </a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-pencil-alt"></i><span> Forms </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="form-elements.html">General Elements</a></li>
-                                <li><a href="form-advanced.html">Advanced Form</a></li>
-                                <li><a href="form-validation.html">Form Validation</a></li>
-                                <li><a href="form-wizard.html">Form Wizard</a></li>
-                                <li><a href="form-wysiwig.html">WYSIWYG Editor</a></li>
-                                <li><a href="form-summernote.html">Summernote</a></li>
-                                <li><a href="form-uploads.html">Multiple File Upload</a></li>
-                                <li><a href="form-xeditable.html">X-editable</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="menu-title">More</li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-menu-alt"></i><span> Tables </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="tables-basic.html">Basic Tables</a></li>
-                                <li><a href="tables-datatable.html">Data Table</a></li>
-                                <li><a href="tables-editable.html">Editable Table</a></li>
-                                <li><a href="tables-responsive.html">Responsive Table</a></li>
-                                <li><a href="tables-tablesaw.html">Tablesaw Table</a></li>
-                                <li><a href="tables-foo-tables.html">Foo Table</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-stats-up"></i><span> Charts </span>
-                                <span class="badge badge-primary pull-right">8</span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="chart-flot.html">Flot Chart</a></li>
-                                <li><a href="chart-morris.html">Morris Chart</a></li>
-                                <li><a href="chart-chartist.html">Chartist chart</a></li>
-                                <li><a href="chart-nvd3.html">Nvd3 charts</a></li>
-                                <li><a href="chart-chartjs.html">Chartjs charts</a></li>
-                                <li><a href="chart-peity.html">Peity Charts</a></li>
-                                <li><a href="chart-sparkline.html">Sparkline Charts</a></li>
-                                <li><a href="chart-other.html">Other Chart</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-map"></i><span> Maps </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="map-google.html"> Google Maps</a></li>
-                                <li><a href="map-vector.html"> Vector Maps</a></li>
-                                <li><a href="map-mapael.html"> Mapael Maps</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-spray"></i> <span> Icons </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="icons-materialdesign.html">Material Design</a></li>
-                                <li><a href="icons-themifyicon.html">Themify Icons</a></li>
-                                <li><a href="icons-ionicons.html">Ion Icons</a></li>
-                                <li><a href="icons-fontawesome.html">Font awesome</a></li>
-                                <li><a href="icons-weather.html">Weather Icons</a></li>
-                            </ul>
                         </li>
 
                         <li class="menu-title">Extras</li>
 
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-files"></i><span> Pages </span>
-                                <span class="menu-arrow"></span>
+                        <li>
+                            <a href="https://lazz.tech/" class="waves-effect waves-primary">
+                                <i class="ti-home"></i><span> About Gian Lazzarini </span>
                             </a>
-                            <ul class="list-unstyled">
-                                <li><a href="pages-blank.html">Blank Page</a></li>
-                                <li><a href="pages-login.html">Login</a></li>
-                                <li><a href="pages-register.html">Register</a></li>
-                                <li><a href="pages-recoverpw.html">Recover Password</a></li>
-                                <li><a href="pages-lock-screen.html">Lock Screen</a></li>
-                                <li><a href="pages-confirmmail.html">Confirm Mail</a></li>
-                                <li><a href="pages-404.html">404 Error</a></li>
-                                <li><a href="pages-500.html">500 Error</a></li>
-                            </ul>
                         </li>
 
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="ti-gift"></i><span> Extras </span>
-                                <span class="badge badge-success pull-right">10</span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="extras-profile.html">Profile</a></li>
-                                <li><a href="extras-timeline.html">Timeline</a></li>
-                                <li><a href="extras-invoice.html">Invoice</a></li>
-                                <li><a href="extras-email-template.html">Email template</a></li>
-                                <li><a href="extras-maintenance.html">Maintenance</a></li>
-                                <li><a href="extras-coming-soon.html">Coming-soon</a></li>
-                                <li><a href="extras-gallery.html">Gallery</a></li>
-                                <li><a href="extras-pricing.html">Pricing</a></li>
-                                <li><a href="extras-faq.html">FAQ</a></li>
-                                <li><a href="extras-treeview.html">Treeview</a></li>
-                            </ul>
-                        </li>
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect">
-                                <i class="ti-share"></i><span>Multi Level </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul>
-                                <li class="has_sub">
-                                    <a href="javascript:void(0);" class="waves-effect"><span>Menu Level 1.1</span>  <span class="menu-arrow"></span></a>
-                                    <ul>
-                                        <li><a href="javascript:void(0);"><span>Menu Level 2.1</span></a></li>
-                                        <li><a href="javascript:void(0);"><span>Menu Level 2.2</span></a></li>
-                                        <li><a href="javascript:void(0);"><span>Menu Level 2.3</span></a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);"><span>Menu Level 1.2</span></a>
-                                </li>
-                            </ul>
-                        </li>
                     </ul>
 
 
