--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_LoginPartial.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-@if (SignInManager.IsSignedIn(User))
+@*@if (SignInManager.IsSignedIn(User))
     {
         <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
             <ul class="nav navbar-nav navbar-right">
@@ -21,4 +21,21 @@
             <li class="nav-item"><a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Register</a></li>
             <li class="nav-item"><a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a></li>
         </ul>
-    }
+    }*@
+
+@if (SignInManager.IsSignedIn(User))
+{
+    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
+            <li class="list-inline-item">
+                <a class="nav-link waves-effect waves-light nav-user" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            </li>
+            <li class="list-inline-item">
+                <button type="submit" class="btn btn-outline-secondary waves-effect waves-light">Logout</button>
+            </li>
+    </form>
+}
+else
+{
+    <li class="list-inline-item"><a class="nav-link waves-effect waves-light nav-user" asp-area="Identity" asp-page="/Account/Register">Register</a></li>
+    <li class="list-inline-item"><a class="nav-link waves-effect waves-light nav-user" asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+}
