Setup admin Minton _Layout and Minton _LoginPartial for logout form

--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout.cshtml
@@ -76,7 +76,7 @@
                         </a>
                     </li>
 
-                    <partial name="_LoginPartial" />
+                    <partial name="Minton/_LoginPartial" />
 
                 </ul>
 
