Added /Event/Index reference to Minton/_Layout_HackathonHandler

--- a/Lazztech.Cloud.ClientFacade/Pages/Event/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Event/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@page
 @model Lazztech.Cloud.ClientFacade.Pages.Event.IndexModel
 @{
+    Layout = "/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml";
+}
+@{
     ViewData["Title"] = "Index";
 }
 
